<resources>
    <string name="app_name">市调APP</string>
    <string name="login">登录</string>
    <string name="login_user_hint">请输入工号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_error_empty_user_pwd">用户名或密码不能为空</string>
    <string name="research_list_title">商品市调清单</string>
    <string name="research_list_start_date">开始时间</string>
    <string name="research_list_end_date">结束时间</string>
    <string name="research_list_dept">执行门店</string>
    <string name="research_list_comp">调研门店</string>
    <string name="research_list_cod_number">调研商品总数</string>
    <string name="research_list_finish_percent">完成进度</string>
    <string name="start_reseach">开始调研</string>
    <string name="category_title">品类</string>
    <string name="research_list_item_add_price">填写价格</string>
    <string name="login_failed">用户名或密码错误，请重试</string>
    <string name="research_list_item_edit_price">修改价格</string>
    <string name="add_price_title">请输入价格</string>
    <string name="add_price_prompt_price_title">促销价:</string>
    <string name="add_price_prompt_price_hint">请输入促销价</string>
    <string name="add_price_origin_price_title">原价:</string>
    <string name="add_price_orgin_price_hint">请输入原价</string>
    <string name="add_price_remark_title">备注:</string>
    <string name="add_price_remark_hint">此处可添加商品备注</string>
    <string name="add_price_miss_tag">是否缺货:</string>
    <string name="add_price_miss_text">缺货</string>

    <string name="scan_tips">\"将条形码对准扫描框即可自动扫描\"</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="settings">设置</string>
    <string name="settings_clear_cache">清理缓存</string>
    <string name="settings_feedback">用户反馈</string>
    <string name="settings_about">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="settings_feedback_hint">请填写您对该应用的想法和建议</string>
    <string name="confirm_title">请确认</string>
    <string name="confirm_logout">是否确认退出登录？</string>
    <string name="confirm">确定</string>
    <string name="need_login">请登录</string>
    <string name="request_failed">请求失败，请重试！</string>
    <string name="unknown_error">未知错误</string>
    <string name="loading">加载中......</string>
    <string name="have_finished">已完成%d%%</string>
    <string name="research_not_started">调研还未开始</string>
    <string name="power_by">Powered By Enford Technology 2016</string>
    <string name="category_code">分类码：%d</string>
    <string name="count">(%d)</string>
    <string name="size" formatted="false">规格：%s(%s)</string>
    <string name="barcode">条形码：%s</string>
    <string name="origin_price">原价：%s</string>
    <string name="prompt_price">促销价：%s</string>
    <string name="edit_price">修改价格</string>
    <string name="add_price">填写价格</string>
    <string name="add_price_error">添加价格失败，请重试</string>
    <string name="add_price_input_error">价格输入有误，请检查后重试</string>
    <string name="research_list_exe">执行门店</string>
    <string name="login_failed_none_dept">登录失败，缺少部门信息</string>
    <string name="research_list_none">暂无市调清单，点击屏幕刷新</string>
    <string name="auto_login_error">自动登录失败，请重试</string>
    <string name="scan_result_title">扫描结果</string>
    <string name="next">下一项</string>
    <string name="empty_text">暂无数据</string>
    <string name="clear_cache_success">清理缓存成功</string>
    <string name="copy_right">商业市调APP v1.0</string>
    <string name="finish_percent" formatted="false">(%d/%d)</string>
</resources>
