<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="450dp"
    android:layout_height="wrap_content" android:background="@color/bg_color">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="14sp"
            android:textColor="@color/title_color"
            android:text="商品名称"
            android:id="@+id/add_price_title"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/sub_title_color"
            android:textSize="14sp"
            android:text="@string/add_price_prompt_price_title"
            android:gravity="end"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/edittext_bg2"
            android:hint="@string/add_price_prompt_price_hint"
            android:textColorHint="@color/hint_text_color"
            android:textSize="12sp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:id="@+id/add_price_prompt_price"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/sub_title_color"
            android:textSize="14sp"
            android:text="@string/add_price_origin_price_title"
            android:gravity="end"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/edittext_bg2"
            android:hint="@string/add_price_orgin_price_hint"
            android:textColorHint="@color/hint_text_color"
            android:textSize="12sp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:id="@+id/add_price_origin_price"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/sub_title_color"
            android:textSize="14sp"
            android:text="@string/add_price_remark_title"
            android:gravity="end"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/edittext_bg2"
            android:hint="@string/add_price_remark_hint"
            android:textColorHint="@color/hint_text_color"
            android:textSize="12sp"
            android:minLines="5"
            android:maxLines="5"
            android:gravity="start|top"
            android:id="@+id/add_price_remark"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:text="@string/add_price_miss_text"
            android:textColor="@color/sub_title_color"
            android:checked="false"
            android:id="@+id/add_price_miss_tag"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_bg"
            android:text="@string/add_price_confirm"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:id="@+id/add_price_confirm"
            />
    </RelativeLayout>
</LinearLayout>