<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/bg_color">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:background="@null"
            android:scaleType="fitCenter"
            android:id="@+id/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/title_color"
            android:text="@string/settings_feedback"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_bg2"
            android:hint="@string/settings_feedback_hint"
            android:gravity="start|top"
            android:textSize="14sp"
            android:id="@+id/settings_feedback_content"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@drawable/btn_text_color"
            android:text="@string/submit"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_bg"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/settings_logout"
            />
    </RelativeLayout>
</LinearLayout>