<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/bg_color">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <ImageButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:background="@null"
            android:scaleType="fitCenter"
            android:id="@+id/back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/title_color"
            android:text="@string/settings"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:id="@+id/settings_clear_cache">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/sub_title_color"
            android:layout_centerVertical="true"
            android:layout_marginStart="23dp"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/settings_clear_cache"
            android:drawablePadding="5dp"
            android:text="@string/settings_clear_cache"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/hint_text_color"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:drawableEnd="@drawable/settings_select"
            android:gravity="center"
            android:text="1.68MB"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:background="@color/line_gray_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:id="@+id/settings_feedback">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/sub_title_color"
            android:layout_centerVertical="true"
            android:layout_marginStart="23dp"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/settings_feedback"
            android:drawablePadding="5dp"
            android:text="@string/settings_feedback"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/hint_text_color"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:drawableEnd="@drawable/settings_select"
            android:gravity="center"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        android:layout_marginTop="11dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:id="@+id/settings_about">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/sub_title_color"
            android:layout_centerVertical="true"
            android:layout_marginStart="23dp"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/settings_about"
            android:drawablePadding="5dp"
            android:text="@string/settings_about"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/hint_text_color"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:drawableEnd="@drawable/settings_select"
            android:gravity="center"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@drawable/btn_text_color"
            android:text="@string/logout"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_bg"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/settings_logout"
            />
    </RelativeLayout>
</LinearLayout>