<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/bg_color">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/title_color"
            android:text="@string/research_list_title"
            android:layout_centerInParent="true"
            android:id="@+id/title"
            />
        <ImageButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:src="@drawable/settings"
            android:background="@null"
            android:scaleType="fitCenter"
            android:id="@+id/research_list_settings"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_gray_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/research_list_layout">
        <com.enford.market.view.HorizontalListView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:id="@+id/research_list_select_commity"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/sub_title_color"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:text="@string/research_list_start_date"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/title_color"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/loading"
                android:id="@+id/research_list_start_date"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:background="@color/line_gray_color"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/sub_title_color"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:text="@string/research_list_end_date"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/title_color"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/loading"
                android:id="@+id/research_list_end_date"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            android:layout_marginTop="11dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/sub_title_color"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:text="@string/research_list_comp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/title_color"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/loading"
                android:id="@+id/research_list_comp"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:background="@color/line_gray_color"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/sub_title_color"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:text="@string/research_list_dept"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/title_color"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/loading"
                android:id="@+id/research_list_dept"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            android:layout_marginTop="11dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/sub_title_color"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_alignParentStart="true"
                android:text="@string/research_list_cod_number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/title_color"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/loading"
                android:id="@+id/research_list_cod_number"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            android:layout_marginTop="11dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:background="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/sub_title_color"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:layout_alignParentStart="true"
                android:text="@string/research_list_finish_percent"
                android:id="@+id/research_list_finish_title"
                />
            <SeekBar
                android:layout_width="322dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="0"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/research_list_finish_title"
                style="@style/Widget.SeekBar.Normal"
                android:id="@+id/research_list_finish_seekbar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/hint_text_color"
                android:layout_marginTop="0dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/research_list_finish_seekbar"
                android:text="@string/loading"
                android:id="@+id/research_list_finish_text"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray_color"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@drawable/btn_text_color"
                android:text="@string/loading"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_bg"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/research_list_start"
                />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/research_list_none_layout"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/hint_text_color"
            android:text="@string/research_list_none"
            android:textSize="16sp"
            />
    </RelativeLayout>
</LinearLayout>